--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-local.properties
+# Default ignored files
+/src/.idea/shelf/
+/src/.idea/workspace.xml
+# Editor-based HTTP Client requests
+/src/.idea/httpRequests/
+# Datasource local storage ignored files
+/src/.idea/dataSources/
+/src/.idea/dataSources.local.xml
