--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "prompts": "^2.4.2",
     "readline-sync": "^1.4.10"
