--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^0.9.0",
     "@google/generative-ai": "^0.22.0",
     "axios": "^1.8.1",
     "cookie-parser": "^1.4.7",
